# main-project-scrum-heads

./: CMakeLists.txt  README.md
WxAppTest/: CMakeLists.txt  README.md  hello_world.cpp
app/: CMakeLists.txt  hello_mongo.cpp  test_loop.cpp  test_robot.cpp
dependencies/: dependencies.cmake
docs/contributions/: Sprint0_Contribution_KayConrad.md  Sprint0_Contribution_QingShen.md  Sprint0_Contribution_Yili_Zhang.md  Sprint1_Contribution_JeremyWhite.md  Sprint1_Contribution_KayConrad.md  Sprint1_Contribution_QingShen.md  Sprint1_Contribution_YiliZhang.md  Sprint2_Contribution_JeremyWhite.md  Sprint2_Contribution_QingShen.md  Sprint2_Contribution_YiliZhang.md  Sprint3_Contribution_JeremyWhite.md  Sprint3_Contribution_KayConrad.md  Sprint3_Contribution_QingShen.md  Sprint3_Contribution_YiliZhang.md  Sprint4_Contribution_JeremyWhite.md  Sprint4_Contribution_KayConrad.md  Sprint4_Contribution_QingShen.md  Sprint4_Contribution_YiliZhang.md  Sprint5_Contribution_JeremyWhite.md  Sprint5_Contribution_KayConrad.md  Sprint5_Contribution_QingShen.md  Sprint5_Contribution_YiliZhang.md  contributions.md  sprint0_contribution_jeremywhite.md  sprint2_Contribution_Kay_Conrad.md
docs/design/: DESIGN.md  classDiagrams.puml
docs/design/Activity_Diagram/: ActivityDiagram.md  ActivityDiagram.puml  DataManagerActivityDiagram.puml  Delete_Robot_AD.puml
docs/design/Architecture_Diagram/: Architecture.md  Architecture_Diagram.drawio
docs/design/Sequence Diagrams/Entity Sequemce Diagrams/: SEQUENCE.md  Sequence_diagram.puml
docs/design/Sequence Diagrams/UI Sequence Diagrams/: UI_sequence_diagrams.md  add_and_remove_robots.puml  assign_room_status.puml  assign_tasks.puml  fix_bugged_robots.puml  view_business_metrics.puml  view_error_logs.puml  view_robots.puml
docs/design/Sequence_Diagrams/Entity_Sequence_Diagrams/: SEQUENCE.md
docs/design/Sequence_Diagrams/UI_Sequence_Diagrams/: fix_bugged_robots.puml  view_error_logs.puml  view_robots.puml
docs/design/Wireframe Diagrams/: USER_INTERFACE.md
docs/design/Wireframe_Diagrams/: USER_INTERFACE.md
docs/design/classDiagram/: DataManagerClassDiagram.puml  SimulationDiagram.puml  classDiagramDesign.md  classDiagrams.puml  mongoAdapter.puml
docs/design/use_case/: use_case.md  use_case.puml
docs/mongoDB/: README.md  important_operations.md  what_is_mongodb.md
docs/notes/: REQUIREMENTS.md  staffing.md
docs/user_guide/: USER_GUIDE.md
include/: DataManager.h  adapter.hpp  robot.hpp  robot_do_task.hpp  robot_loop.hpp  robot_loop_lib.hpp  robot_manager.hpp  room.hpp  room_task.hpp  rooms.txt  task.hpp
include/System_Manager/: CMakeLists.txt  SystemManager.hpp
include/adapters/: mongo_adapter.hpp
include/utils/: point2d.hpp  threadsafe_queue.hpp  utils.hpp
robot_loop/: CMakeLists.txt  robot_loop.cpp  robot_loop_lib.cpp
room_task/: CMakeLists.txt  room_task.cpp
simulation/: CMakeLists.txt  robot_do_task.cpp  robot_manager.cpp  room_task.cpp
simulation/robot_loop/: CMakeLists.txt  robot_do_task.cpp
simulation/room_task/: room_task.cpp
simulation/simulation_tests/: CMakeLists.txt  unit_test_loop.cpp
simulation_tests/: unit_test_loop.cpp
src/: CMakeLists.txt  DataManager.cpp  SystemManager.cpp  mongo_adapter.cpp  robot.cpp
tests/: CMakeLists.txt  test_datamanager.cpp  test_mongodb.cpp  test_simulation.cpp  unit_test_loop.cpp
wxWidgets/: CMakeLists.txt  README.md
wxWidgets/Project_Implementation/: MyProjectBase.cpp  MyProjectBase.h  README.md  SWE_Project_GUI.fbp  addRobotFrame.cpp  addRobotFrame.hpp  addTaskFrame.cpp  addTaskFrame.hpp  baseFrame.cpp  baseFrame.hpp  bmBaseFrame.cpp  bmBaseFrame.hpp  bsBaseFrame.cpp  bsBaseFrame.hpp  feBaseFrame.cpp  feBaseFrame.hpp  main.cpp  robotInfoFrame.cpp  robotInfoFrame.hpp  smBaseFrame.cpp  smBaseFrame.hpp  viewTaskFrame.cpp  viewTaskFrame.hpp
wxWidgets/WxAppTest/: CMakeLists.txt  README.md  hello_world.cpp
wxWidgets/wxFormBuilder/hello_world_trial/: CMakeLists.txt  MyProjectBase.cpp  MyProjectBase.h  README.md  derivedFrame.cpp  derivedFrame.hpp  main.cpp  newDerivedFrame.cpp  newDerivedFrame.hpp  wxFormBuilder_hello_world.fbp
